# personal-app

./: .gitignore  README.md  pyproject.toml
backend/: README.md
backend/core/: api.py  asgi.py  models.py  urls.py  wsgi.py
backend/core/settings/: base.py
backend/libs/: errors.py
backend/libs/crud/: __init__.py  services.py
backend/libs/permissions/: base.py  ownership.py  services.py
backend/libs/schemas/: errors.py
backend/planner/: admin.py  api.py
backend/planner/migrations/: 0001_initial.py
backend/planner/models/: __init__.py  period_models.py  task_models.py
backend/planner/schemas/: __init__.py  period_schemas.py  task_schemas.py
backend/planner/services/: period_services.py  task_services.py
backend/planner/views/: __init__.py  period_views.py  task_views.py
backend/users/: urls.py
backend/users/migrations/: 0001_initial.py
frontend/: .eslintignore  .eslintrc.json  .prettierrc.json  package.json  pnpm-lock.yaml
frontend/src/components/: Card.astro
frontend/src/components/periods/: DayPeriod.astro
frontend/src/components/planner/: Planner.tsx
frontend/src/components/planner/periods/: DayPeriod.tsx
frontend/src/pages/: index.astro  login.astro  planner.astro
frontend/src/scripts/authentication/: login.ts
frontend/src/services/: api.ts  apiRoutes.ts
frontend/src/services/planner/: plannedPeriodServices.ts
frontend/src/types/: periods.ts  periods.tsx
